# COMP2811CW3

./: .gitignore  CD.cpp  CD.hpp  CMakeLists.txt  Dashboard.cpp  Dashboard.hpp  DataPage.cpp  DataPage.hpp  OverviewCards.cpp  OverviewCards.hpp  PFAs.cpp  PFAs.hpp  PO.cpp  PO.hpp  POPs.cpp  POPs.hpp  README.md  main.cpp  stats.cpp  stats.hpp  window.cpp  window.hpp
.github/workflows/: build.yml
languages/: en_GB.qm  en_GB.xml  fr_FR.qm  fr_FR.xml  gv_IM.xml
qml/: Map.qml
styles/: MapView.qml  main.qss
utils/: Compliance.cpp  Compliance.hpp  DataModel.cpp  DataModel.hpp  Dataset.cpp  Dataset.hpp  GlobalDataModel.cpp  GlobalDataModel.hpp  Measurement.cpp  Measurement.hpp  SamplingPoint.cpp  SamplingPoint.hpp  compliance.cpp  compliance.hpp  csv.hpp  dataset.cpp
views/: CD.cpp  CD.hpp  Dashboard.cpp  Dashboard.hpp  DataPage.cpp  DataPage.hpp  GH.cpp  GH.hpp  OverviewCards.cpp  OverviewCards.hpp  PFAs.cpp  PFAs.hpp  PO.cpp  PO.hpp  POPs.cpp  POPs.hpp
